[project]
name = "prompt_detection_study"
version = "0.1.0"
description = "Prompt detection algorithms study"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.4.1",
    "fastparquet>=2024.11.0",
    "huggingface-hub>=0.29.3",
    "polars>=1.25.2",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "transformers>=4.49.0",
]

[dependency-groups]
dev = [
    "hy>=1.0.0",
    "hyrule>=1.0.0",
    "ipython>=9.0.2",
    "openpyxl>=3.1.5",
    "pyarrow>=19.0.1",
    "snoop>=0.6.0",
    "translate>=3.6.1",
    "visidata>=3.1.1",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
